syntax = "proto3";

option go_package = "github.com/Booking-Platform/accommodation-booking-webapp/common/accommodation";

package accommodation;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service AccommodationService{


  rpc GetAll(GetAllAccommodationsRequest) returns(GetAllAccommodationsResponse) {
    option (google.api.http) = {
      get: "/accommodations"
    };
  }


  rpc GetById(GetAccommodationByIdRequest) returns (GetAccommodationByIdResponse) {
    option (google.api.http) = {
      get: "/accommodations/{id}"
    };
  }

  rpc CreateAccommodation(CreateAccommodationRequest) returns(CreateAccommodationResponse) {
    option (google.api.http) = {
      post: "/accommodation/create"
      body: "newAccommodation"
    };
  }
}

message GetAllAccommodationsRequest {
}

message GetAllAccommodationsResponse {
  repeated Accommodation accommodations = 1;
}

message GetAccommodationByIdRequest {
  string id = 1;
}

message GetAccommodationByIdResponse {
  Accommodation accommodation = 1;
}

message CreateAccommodationRequest{
  NewAccommodation newAccommodation = 1;
}

message CreateAccommodationResponse{
  Accommodation accommodation = 1;
}


message AddressDTO {
  string street = 1;
  string city = 2;
  string country = 3;
  string number = 4;
}

message BenefitDTO {
  string name = 1;
}

message NewAccommodation {
  string name = 1;
  int32 min_guest_num = 2;
  int32 max_guest_num = 3;
  AddressDTO address = 4;
  bool automatic_confirmation = 5;
  repeated string photo = 6;
  repeated BenefitDTO benefits = 7;
}


message Accommodation {
  string id = 1;
  string name = 2;
  int32 min_guest_num = 3;
  int32 max_guest_num = 4;
  Address address = 5;
  bool automatic_confirmation = 6;
  repeated string photo = 7;
  repeated Benefit benefits = 8;
  repeated Appointment appointments = 9;
}

message Address {
  string id = 1;
  string country = 2;
  string city = 3;
  string street = 4;
  string number = 5;
}

message Appointment {
  string id = 1;
  google.protobuf.Timestamp from = 2;
  google.protobuf.Timestamp to = 3;
  AppointmentStatus status = 4;
  double price = 5;
  bool per_guest = 6;
}

enum AppointmentStatus {
  AVAILABLE = 0;
  RESERVED = 1;
}

message Benefit {
  string id = 1;
  string name = 2;
}
